fix spacing

--- a/src/components/homepage/styles.scss
+++ b/src/components/homepage/styles.scss
@@ -47,7 +47,7 @@
     }
 
     &.user-created {
-      width: 245px;
+      width: 238px;
     }
 
     margin-top: 10px;
